# Ecostreak-Project

./: .gitignore  README.md  modakd.py  pyproject.toml  requirements.txt  roadmap.md  tree.txt
.github/workflows/: ci.yml
data/: cpu_log.csv  cpu_log_2025-09-21_134738.csv  cpu_log_2025-09-21_141403.csv  cpu_log_2025-09-28_101223.csv  cpu_log_2026-04-13_223019.csv  cpu_log_2026-04-14_100841.csv  cpu_log_2026-07-20_144412.csv
data/sample/: cpu_log_sample.csv
ecostreak/: __init__.py
ecostreak-env/: pyvenv.cfg
ecostreak-env/Scripts/: activate  activate.bat
ecostreak.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ecostreak/cli/: main.py
ecostreak/core/: analyzer.py  energy.py  logger.py  streak.py  visualize.py
ecostreak/data/: cpu_log.csv
src/: analyzer.py  energy.py  logger.py  main.py  sih.py  visualize.py
tests/: test.py  test_energy.py  test_streak.py
